--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ a {
 }
 
 .btn_blue {
-    width: 330px;
     border: 2px solid;
     border-radius: 30px;
     color: #0c2a7b;
@@ -22,11 +21,26 @@ a {
     box-sizing: border-box;
     padding: 15px;
     transition: .4s;
+    cursor: pointer;
 }
 
 .btn_blue:hover{
     background-color: #0c2a7b;;
     color: #fff;
+}
+
+.btn_box {
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    font-size: 14px;
+    box-sizing: border-box;
+    padding: 10px 15px;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.btn_box:hover {
+    color: #549F97;
 }
 
 /* header */
@@ -177,7 +191,8 @@ header .search.focused .material-icons {
 }
 
 .sermon .container_group .container .wrapper .rollover .rollover_content .icon_group {
-    margin-top: 50px;
+    margin-top: 50px ;
+    margin-bottom: 15px;
 }
 
 .sermon .container_group .container .wrapper .rollover .rollover_content .icon_group a {
@@ -196,14 +211,18 @@ header .search.focused .material-icons {
     z-index: 1;
 }
 
-.sermon .container_group .container .wrapper .rollover .rollover_content h2 {
+.sermon .container_group .container .wrapper .rollover .rollover_content .sub_link .page_01 {
     font-size: 23px;
+    font-weight: 700;
+    line-height: 1.7;
     text-align: center;
+    color: #666666;
 }
 
-.sermon .container_group .container .wrapper .rollover .rollover_content h3 {
+.sermon .container_group .container .wrapper .rollover .rollover_content .sub_link .page_02 {
     font-size: 12px;
     text-align: center;
+    color: #333333;
 }
 
 .sermon .container_group .container img {
@@ -240,8 +259,317 @@ header .search.focused .material-icons {
     text-align: center;
 }
 /* confession */
+.testimony {
+    height: 630px;
+    background-image: url(http://new.tjc.or.kr/wp-content/uploads/2017/11/bg_main_testimony-300x198.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.testimony .inner {
+    
+}
 
+.testimony .inner .title {
+    display: flex;
+    justify-content: center;
+}
+
+.testimony .inner h2 {
+    padding: 35px 0px;
+    font-size: 50px;
+    font-weight: 700;
+    color: #0c2a7b;
+}
+
+.testimony .confession_group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.testimony .confession_group .confession {
+    width: 370px;
+    height: 370px;
+    background-color: #ffffff;
+    position: relative;
+}
+
+.testimony .confession_group .confession .wrapper {
+    
+}
+
+.testimony .confession_group .confession .wrapper .rollover {
+    position: relative;
+}
+
+.testimony .confession_group .confession .wrapper .rollover .rollover_content {
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    opacity: 0;
+}
+
+.testimony .confession_group .confession .wrapper .rollover .rollover_content .icon_group {
+    margin-top: 50px;
+    margin-bottom: 15px;
+}
+
+.testimony .confession_group .confession .wrapper .rollover .rollover_content .icon_group a {
+    border-radius: 50%;
+    background-color: #333;
+    color: #ffffff;
+    font-size: 32px;
+}
+.testimony .confession_group .confession .wrapper .rollover .rollover_content .icon_group a:hover {
+    cursor: pointer;
+}
+
+.testimony .confession_group .confession .wrapper .rollover .rollover_content:hover {
+    background-color: #ffffff;
+    opacity: 0.7;
+    z-index: 1;
+}
+
+.testimony .confession_group .confession .wrapper .rollover .rollover_content .sub_link .page_01 {
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 1.6;
+    color: #333333;
+    text-align: center;
+}
+
+.testimony .confession_group .confession .wrapper .rollover .rollover_content .sub_link .page_02 {
+    font-size: 12px;
+    color: #666666;
+    text-align: center;
+}
+
+.testimony .confession_group .confession img {
+    width: 370px;
+    height: 250px;
+    margin-bottom: 30px;
+    position: absolute;
+    opacity: 1;
+}
+
+.testimony .inner .confession_group .confession .text_group {
+    margin-top: 30px;
+    margin-left: 10px;
+    position: relative;
+}
+
+.testimony .inner .confession_group .confession .text_group .page_01 {
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 1.6;
+    color: #0c2a7b;
+}
+
+.testimony .inner .confession_group .confession .text_group .page_02 {
+    font-size: 12px;
+    color: #666666;
+    
+}
+
+.testimony .btn {
+    margin-top: 50px;
+    text-align: center;
+}
 /* book publication */
+.publication {
+    height: 630px;
+    background-color: #E6E6E6;
+}
 
+.publication .title_group {
+    display: flex;
+}
+
+.publication .title_group .design img {
+    width: 150px;
+    height: 200px;
+}
+
+.publication .title_group .name {
+    display: flex;
+    align-items: center;
+    width: 1170px;
+    justify-content: center;
+}
+
+.publication .title_group .name img {
+    width: 500px;
+    height: 100px;
+}
+
+.publication .book_group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.publication .book_group .book {
+    width: 261px;
+    height: 331px;
+}
+
+.publication .book_group .book .wrapper .rollover {
+    position: relative;
+}
+
+.publication .book_group .book .wrapper .rollover img {
+    width: 260px;
+    height: 331px;
+    position: absolute;
+}
+
+.publication .book_group .book .wrapper .rollover .rollover_content {
+    width: 260px;
+    height: 331px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ffffff;
+    text-align: center;
+    opacity: 0;
+}
+
+.publication .book_group .book .wrapper .rollover .rollover_content:hover {
+    opacity: 0.8;
+    z-index: 1;
+}
+
+.publication .book_group .book .wrapper .rollover .rollover_content .icon_group {
+    margin-bottom: 15px;
+}
+
+.publication .book_group .book .wrapper .rollover .rollover_content .icon_group a {
+    border-radius: 50%;
+    background-color: #333;
+    color: #ffffff;
+    font-size: 32px;
+}
+
+.publication .book_group .book .wrapper .rollover .rollover_content .icon_group a:hover {
+    cursor: pointer;
+}
+
+.publication .book_group .book .wrapper .rollover img:hover {
+    
+}
+
+.publication .book_group .book .sublink_group {
+    
+}
+
+.publication .book_group .book .page_01 {
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 1.6;
+    color: #333333;
+}
+
+.publication .book_group .book .page_02 {
+    font-size: 12px;
+    color: #666666;
+}
+
+.publication .btn {
+    margin-top: 25px;
+    text-align: center;
+    
+}
 /* footer  */
+footer {
+    height: 550px;
+    background-image: url(http://new.tjc.or.kr/wp-content/uploads/2017/11/%ED%92%8B%ED%84%B0-%EB%B0%B0%EA%B2%BD.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
+footer .explanation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer .explanation img {
+    width: 720px;
+    height: 200px;
+    margin-top: 30px;
+}
+
+footer .explanation h2 {
+    font-size: 18px;
+    color: #ffffff;
+    margin-top: 30px;
+}
+
+footer .container_group {
+    display: flex;
+    height: 225px;
+    background-color: #0c2a7b;
+    opacity: 0.7;
+    margin-top: 50px;
+}
+
+footer .container_group .logo {
+    margin-top: 30px;
+    margin-left: 15px;
+    margin-right: 30px;
+}
+
+footer .container_group .btn_group {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    margin-top: 10px;
+}
+
+footer .container_group .btn_group .btn_box {
+    margin-right: 10px;
+}
+
+footer .container_group .btn_group .btn_box:last-child {
+    margin-right: 0px;
+}
+
+footer .container_group .description_group {
+    width: 900px;
+    color: #ffffff;
+}
+
+footer .container_group .description_group .description {
+    position: relative;
+}
+
+footer .container_group .description_group .description .adress {
+    position: absolute;
+    top: 15px;
+}
+
+footer .container_group .description_group .description .number {
+    position: absolute;
+    top: 15px;
+    left: 400px;
+}
+
+footer .container_group .description_group .description .zipcode {
+    position: absolute;
+    top: 50px;
+}
+
+footer .container_group .description_group .description .fax_number {
+    position: absolute;
+    top: 50px;
+    left: 400px;
+}
+
+footer .container_group .copyright {
+    /* position: absolute;
+    top: 500px; */
+    display: flex;
+    height: 130px;
+    color: #777;
+    justify-content: center;
+    align-items: flex-end;
+}
