서브페이지3 미완성

--- a/css/sub_01.css
+++ b/css/sub_01.css
@@ -162,6 +162,7 @@ header .search.focused .material-icons {
 .lecture .title h2 {
     color: #fff;
     font-size: 40px;
+    font-weight: 700;
 }
 
 .lecture .title .sub_link {
